integrated patch by elakito to support multiple projects https://github.com/elakito

--- a/src/main/webapp/lib/bootstrap/css/bootstrap.css
+++ b/src/main/webapp/lib/bootstrap/css/bootstrap.css
@@ -2287,7 +2287,7 @@ table th[class*="span"],
   background-repeat: no-repeat;
 }
 
-/* White icons with optional class, or on hover/focus/active states of certain elements */
+/* White icons with optional class, or orgName hover/focus/active states of certain elements */
 
 .icon-white,
 .nav-pills > .active > a > [class^="icon-"],
